--- a/proyecto/src/App.css
+++ b/proyecto/src/App.css
@@ -184,3 +184,34 @@
   font-weight: 500;
   line-height: normal;
 }
+table {
+  width: 35%;
+}
+
+table td {
+  text-align: right;
+  padding: 5px;
+  font-family: Inter;
+  font-size: 24px;
+}
+
+.input-wide {
+  width: 10%; /* Ajusta el ancho según tus necesidades */
+}
+
+.input-narrow {
+  width: 10%; /* Ajusta el ancho según tus necesidades */
+}
+
+.input-medium {
+  width: 10%; /* Ajusta el ancho según tus necesidades */
+}
+
+table input {
+  padding: 8px;
+  border: 1px solid #7E7E7E;
+  border-radius: 3px;
+}
+
+
+
