--- a/proyecto/src/index.css
+++ b/proyecto/src/index.css
@@ -1,3 +1,219 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.postulaciones-outside {
+    display: flex;
+    padding: 20px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .postulaciones-container {
+    display: flex;
+    width: 1440px;
+    padding: 25px 15px;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+    border-radius: 15px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  .postulacion-title {
+    color: #422257;
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  
+  .postulantes-table {
+    display: flex;
+    padding: 0px 20px;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    align-self: stretch;
+  }
+  
+  .tabla-titles {
+    display: flex;
+    height: 64px;
+    align-items: center;
+    align-self: stretch;
+    border-bottom: 3px solid #623280;
+    background: #FFF;
+  }
+  
+  #title-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1 0 0;
+    align-self: stretch;
+    color: #422257;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+  #title-grade {
+    display: flex;
+    width: 225px;
+    flex-direction: column;
+    justify-content: center;
+    align-self: stretch;
+    color: #422257;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+  #title-summary {
+    display: flex;
+    width: 275px;
+    flex-direction: column;
+    justify-content: center;
+    align-self: stretch;
+    color: #422257;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+  #title-check {
+    display: flex;
+    width: 225px;
+    flex-direction: column;
+    justify-content: center;
+    align-self: stretch;
+    color: #422257;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+  .table-row {
+    display: flex;
+    height: 70px;
+    align-items: center;
+    align-self: stretch;
+  }
+  
+  #postulante-name {
+    display: flex;
+    align-items: center;
+    flex: 1 0 0;
+    align-self: stretch;
+    border-right: 1px solid rgba(0, 0, 0, 0.10);
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+  #postulante-nota {
+    display: flex;
+    width: 225px;
+    padding: 0px 50px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-right: 1px solid rgba(0, 0, 0, 0.10);
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+  #postulante-summary {
+    display: flex;
+    width: 275px;
+    padding: 0px 50px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-right: 1px solid rgba(0, 0, 0, 0.10);
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+  #postulante-check {
+    display: flex;
+    width: 225px;
+    padding: 0px 50px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+  .postulaciones-button {
+    display: flex;
+    padding: 4px 110px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    background: #7D45A1;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  table {
+    width: 100%;
+  }
+  
+  table td {
+    text-align: right;
+    padding: 5px;
+    font-family: Inter;
+    font-size: 24px;
+  }
+  
+  .input-wide {
+    width: 10%; /* Ajusta el ancho según tus necesidades */
+  }
+  
+  .input-narrow {
+    width: 10%; /* Ajusta el ancho según tus necesidades */
+  }
+  
+  .input-medium {
+    width: 10%; /* Ajusta el ancho según tus necesidades */
+  }
+  
+  table input {
+    padding: 8px;
+    border: 1px solid #7E7E7E;
+    border-radius: 3px;
+  }
+
